--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,314 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  font-family: 'Noto Sans', sans-serif;
+  word-spacing: -0.1em;
 }
 
-.App-logo {
-  height: 40vmin;
+*,*::before,*::after{
+  box-sizing: border-box;
+}
+
+::-webkit-scrollbar{
+  width: 0.3em;
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: #13aab1;
+  border-radius: 5px;
+}
+
+input:focus::placeholder{
+  color: transparent;
+}
+
+body{
+  background-color: #165065;
+}
+
+#root{
+  display: grid;
+  justify-items: center;
+  height: 100vh;
+  align-items: center;
+}
+
+.App{
+  width: min(1100px, 90%);
+  display: flex;
+  height: fit-content;
+  background-color: #ffffff;
+  border-radius: 10px;
+  color: #323232;
+}
+
+.aside{
+  align-content: flex-start;
+  width: 24%;
+  display: flex;
+  flex-direction: column;
+}
+
+.aside header{
+  background-color: #13aab1;
+  display: grid;
+  justify-content: center;
+  padding-block: 20px;
+  text-align: center;
+  border-top-left-radius: 10px;
+}
+
+.archiveSearch{
+  display: grid;
+  gap: 5px;
+  padding-block: 10px;
+  padding-inline: 5px;
+  border-bottom: 1px solid #323232;
+}
+
+.searchInput{
+  border-radius: 2px;
+  border: 1px solid #323232;
+  text-indent: 5px;
+  text-align: center;
+  padding-block: 2px;
+  outline: none;
+  width: 100%;
+}
+
+.archive{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.disappear{
+  opacity: 0;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.chatList{
+  display: grid;
+  height: 610px;
+  overflow: hidden;
+  overflow-y: scroll;
+  padding-inline: 7px;
+  align-content: flex-start;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.chatList>:last-child{
+  border-bottom: none;
+}
+
+.chatCard{
   display: flex;
-  flex-direction: column;
   align-items: center;
+  padding: 15px 5px;
+  gap: 5px;
+  border-bottom: 0.2px solid rgba(80, 79, 79, 0.382);
+  cursor: pointer;
+}
+
+.chatCardLeft{
+  width: 100%; 
+}
+
+.chatCard h3{
+  font-size: 20px;
+}
+
+.msgPreview{
+  font-size: 13px;
+}
+
+.lastMod{
+  font-size: 10px;
+}
+
+.activeChat{
+  background-color: #28c7ce;
+  transition: 0.3s ease-in-out;
+}
+
+.noResult{
+  margin: 2rem auto 0 auto;
+  text-align: center;
+  word-break: break-word;
+}
+
+/*Main Styling*/
+
+.Main{
+  width: 76%;
+  border-left: 1px solid rgb(103, 102, 102);
+  display: grid;
+  position: relative;
+}
+
+.mainHeader{
+  padding: 18.4px;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  background-color: #13aab1;
+  border-top-right-radius: 10px;
+}
+
+.chatMenu{
+  display: grid;
+  gap: 4px;
+  cursor: pointer;
+  padding: 0.5rem 1.1rem;
+  border-radius: 50%;
+  position: relative;
+}
+
+.chatMenu:hover{
+  background-color: #3232321c;
+}
+
+.chatMenu div{
+  width: 4px;
+  height: 4px;
+  background-color: #000000c9;
+  border-radius: 50%;
+}
+
+.mainHeaderMenu{
+  position: absolute;
+  background-color: #165065;
+  display: grid;
+  right: 1rem;
+  bottom: -7rem;
+  width: max-content;
+  text-align: center;
+  color: #ffffff;
+}
+
+.mainHeaderMenu>*{
+  padding: 0.6rem 1rem;
+  font-size: 14px;
+}
+
+.mainHeaderMenu>*:hover{
+  transition: all 0.2s ease-in-out;
+  background-color: #28c7ce;
+  color: #323232;
+}
+
+.messageList{
+  display: grid;
+  gap: 15px;
+  height: 613px;
+  overflow: hidden;
+  overflow-y: scroll;
+  padding: 10px 20px;
+  align-content: flex-start;
+}
+
+.justifyLeft{
+  justify-self: left;
+}
+
+.justifyRight{
+  justify-self: right;
+}
+
+.messageLine{
+  background-color: #28c7ce;
+  display: flex;
+  justify-content: space-between;
+  gap: 13px;
+  padding: 7px 10px;
+  border-radius: 7px;
+}
+
+.msg{
+  font-size: 15px;
+}
+
+.timeSent{
+  font-size: 12px;
+  align-self: flex-end;
+}
+
+.chatFooter{
+  padding: 13px 20px;
+  background-color: #13aab1;
+  border-bottom-right-radius: 10px;
+}
+
+form{
+  display: flex;
+  background-color: #ffffff;
+  padding: 6px 10px;
+  gap: 10px;
+  border-radius: 5px;
+}
+
+form input{
+  background: none;
+  border: none;
+  width: 100%;
+  text-indent: 9px;
+  outline: none;
+  font-size: 16.5px;
+}
+
+form button{
+  padding: 7px 25px;
+  background-color: #13aab1;
+  border: none;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+/* Main Initial*/
+
+.mainInitial{
+  place-self: center;
+  text-align: center;
+  display: grid;
+  gap: 0.3rem;
+}
+
+.icons{
+  display: flex;
+  gap: 2rem;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.icons>*:first-child{
+  rotate: 7deg;
+  height: 9.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.icons>*:last-child{
+  rotate: -7deg;
+  height: 6rem;
+  width: 6rem;
+}
+
+.arrow{
+  height: 2rem;
+  width: 4rem;
+}
+
+.des{
+  width: 65%;
+  justify-self: center;
+  font-size: 14px;
+}
+
+.encrypt{
+  position: absolute;
+  bottom: 3%;
+  left: 50%;
+  translate: -50% 0;
 }
