--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-*{
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  font-family: 'Noto Sans', sans-serif;
-  word-spacing: -0.1em;
-}
+@import url('https://fonts.googleapis.com/css2?family=Glory:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
-*,*::before,*::after{
-  box-sizing: border-box;
-}
 
 ::-webkit-scrollbar{
   width: 0.3em;
 }
 
 ::-webkit-scrollbar-thumb{
-  background-color: #13aab1;
+  background-color: #467599;
   border-radius: 5px;
 }
 
@@ -25,16 +18,9 @@
   display: none;
 }
 
-input:focus::placeholder{
-  color: transparent;
-}
-
-::placeholder{
-  color: #323232;
-}
-
 body{
-  background-color: #165065;
+  background-color: #a5a5a5;
+  font-family: 'Glory', sans-serif;
 }
 
 #root{
@@ -44,28 +30,34 @@ body{
   align-items: center;
 }
 
-.App{
+.owner{
+  justify-self: right;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0;
+}
+
+/* .App{
   width: min(1100px, 90%);
   display: flex;
-  height: fit-content;
+  height: 650px;
   background-color: #ffffff;
   border-radius: 10px;
   color: #323232;
   position: relative;
-}
+} */
 
-.aside{
+/* .aside{
   align-content: flex-start;
   width: 24%;
   display: flex;
   flex-direction: column;
-}
+} */
 
-.aside header{
+/* .aside header{
   background-color: #13aab1;
   display: grid;
   justify-content: center;
-  padding-block: 20px;
+  padding-block: 10px;
   text-align: center;
   border-top-left-radius: 10px;
 }
@@ -110,10 +102,10 @@ body{
 .searchPlus>:last-child{
   cursor: pointer;
   color: #046c71;
-}
+} */
 
 
-.chatList{
+/* .chatList{
   display: grid;
   height: 610px;
   overflow: hidden;
@@ -150,28 +142,28 @@ body{
 .lastMod{
   font-size: 10px;
 }
+*/
 
 .activeChat{
   background-color: #28c7ce;
   transition: 0.3s ease-in-out;
 }
 
-.noResult{
+/* .noResult{
   margin: 2rem auto 0 auto;
   text-align: center;
   word-break: break-word;
-}
+}  */
 
 /*Main Styling*/
 
-.Main{
+/* .Main{
   width: 76%;
-  border-left: 1px solid rgb(103, 102, 102);
   display: grid;
   position: relative;
-}
+} */
 
-.mainHeader{
+/* .mainHeader{
   padding: 18.4px;
   align-items: center;
   display: flex;
@@ -287,11 +279,11 @@ form button{
   border: none;
   font-weight: 500;
   cursor: pointer;
-}
+} */
 
 /* Main Initial*/
 
-.mainInitial{
+/* .mainInitial{
   place-self: center;
   text-align: center;
   display: grid;
@@ -334,7 +326,7 @@ form button{
   translate: -50% 0;
 }
 
-/*Add contact*/
+Add contact
 .newContactPopup{
   position: absolute;
   top: 0;
@@ -381,5 +373,5 @@ form button{
 .newContactForm input{
   background-color: #13a9b163;
   padding-block: 0.5rem;
-}
+} */
 
