--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,11 @@ body{
   align-items: center;
 }
 
+.Main .dropdown-content{
+  visibility: visible !important;
+  opacity: 1 !important;
+}
+
 /* .App{
   width: min(1100px, 90%);
   display: flex;
