--- a/src/index.css
+++ b/src/index.css
@@ -17,10 +17,15 @@
   display: none;
 }
 
+html {
+  height: -webkit-fill-available;
+}
+
 body{
   background-color: #ffffff;
   font-family: 'Glory', sans-serif;
   height: 100vh;
+  height: -webkit-fill-available;
 }
 
 #root{
